# hsx

./: .gitignore  COPYING  Makefile  README.md  htx.py  markdown.htx  mkAutoSite.py  page.hsx  pyproject.toml
_fragx/: Banner.htx  Content.hsx  Header.hsx
docs/: Manual.md  temp-dev.md
example/simple_example/: markdown.hsx
examples/auto-site-example/: .gitignore
examples/auto-site-example/pages/: LatestChanges.md
examples/auto-site-example/site-resources/About/: base.css
examples/auto-site-example/templates/content-templates/: default_template.md  example_based_on_default_template.md
examples/auto-site-example/templates/render-templates/: page-template.html
examples/auto-site-example/templates/render-templates/About/: page-template.html
examples/simple_html/: Makefile  source-page.html
examples/simple_html/_fragx/: Footer.hsx  Header.hsx
frags/: Trailer.hsx  sample.hsx
scripts/: bump_rev.sh
src/hsx/: __init__.py  autosite.py  hsx.py
