[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hsx"
version = "0.0.1"
authors = [
  { name="Michael Sparks", email="sparks.m@gmail.com" },
]
description = "hsx - Hypertext, templating with XML-like evaluation inspired by JSX"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sparkslabs/hsx"
Issues = "https://github.com/sparkslabs/hsx/issues"

